<resources>
    <string name="app_name">专属APP</string>
    <string name="app_start_title">为您私人定制的APP</string>
    <string name="drawerOpen">drawerOpen</string>
    <string name="drawerClose">drawerClose</string>
    <string name="home_tabhost_discover">发现</string>
    <string name="home_tabhost_settings">设置</string>
    <string name="home_tabhost_theme">切换主题</string>
    <string name="filemanager">文档管理</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="account">账户</string>
    <string name="password">密码</string>
    <string name="plzinput">请输入口令</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="name">名称</string>
    <string name="processname">进程名称</string>
    <string name="memoryuse">内存占用</string>
    <string name="title">标题</string>
    <string name="urltitle">URL</string>
    <string name="mygithubtitle">&lt;b&gt;APP源码地址&lt;/b&gt;</string>
    <string name="myweibotitle">&lt;b&gt;联系方式&lt;/b&gt;</string>
    <string name="websitetitle">&lt;b&gt;网站管理相关&lt;/b&gt;</string>
    <string name="phonemantitle">&lt;b&gt;手机管理相关&lt;/b&gt;</string>
    <string name="passtitle">&lt;b&gt;密码管理相关&lt;/b&gt;</string>
    <string name="customtitle">&lt;b&gt;建议及定制化&lt;/b&gt;</string>
    <string name="mygithubdesc">&lt;u&gt;github&lt;/u&gt; 如果你喜欢这个app,请使用你的github账号给我的项目加个星</string>
    <string name="myweibodesc">&lt;u&gt;新浪微博&lt;/u&gt;</string>
    <string name="websitedesc">方便直接打开常看网站</string>
    <string name="phonemandesc">在不root的情况下管理手机</string>
    <string name="passdesc">使用一个口令管理其他密码。口令长度需10位以上</string>
    <string name="customdesc">可到微博下提建议增加相应功能，相同建议的人多，会进行增加，开发后在应用商店更新app</string>
    <string name="mainpage_title">&lt;b&gt;首页标题&lt;/b&gt;</string>
    <string name="main_title">个人专属app</string>
    <string name="cleanall">一键清理</string>
    <string name="tl_nothingtips">可向图灵机器人提问,如输入“北京天气”</string>
    <string name="nothingtips">没有数据,可点击+添加</string>
    <!-- iconfont -->
    <string name="menu_add">&#xe603;</string>
    <string name="discover_icon">&#xe60d;</string>
    <string name="space_icon">&#xe602;</string>
    <string name="process_icon">&#xe60b;</string>
    <string name="account_icon">&#xe60e;</string>
    <string name="option_icon">&#xe608;</string>
    <string name="service_icon">&#xe610;</string>
    <string name="delete_icon">&#xe601;</string>
    <string name="set_icon">&#xe600;</string>
    <string name="menu_theme">&#xe60f;</string>
    <string name="edit_icon">&#xe606;</string>
    <string name="submit_icon">&#xe60a;</string>
    <string name="password_icon">&#xe604;</string>
    <string name="lock_icon">&#xe607;</string>
    <string name="unlock_icon">&#xe605;</string>
    <string name="my_icon">&#xe609;</string>
    <string name="title_icon">&#xe60c;</string>
    <string name="loading_icon">&#xe611;</string>
</resources>
