<LinearLayout android:id="@+id/drawerBack" xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/menulayout" android:orientation="vertical">
    <View style="@style/menuline" />
    <LinearLayout
        android:id="@+id/menu_dis"
        style="@style/menuitemlayout">
        <TextView android:id="@+id/menu_discover_icon" style="@style/menutextstyle"
            android:text="@string/discover_icon"  />
        <TextView style="@style/menutextstyle" android:layout_width="match_parent"
            android:text="@string/home_tabhost_discover"  />
    </LinearLayout>
    <View style="@style/menuline" />
    <LinearLayout
        android:id="@+id/menu_set"
        style="@style/menuitemlayout">
        <TextView android:id="@+id/menu_set_icon" style="@style/menutextstyle"
            android:text="@string/set_icon"  />
        <TextView style="@style/menutextstyle" android:layout_width="match_parent"
            android:text="@string/home_tabhost_settings" />
    </LinearLayout>
    <View style="@style/menuline" />
    <LinearLayout
        android:id="@+id/menu_theme"
        style="@style/menuitemlayout">
        <TextView android:id="@+id/menu_theme_icon" style="@style/menutextstyle"
            android:text="@string/menu_theme"  />
        <TextView style="@style/menutextstyle" android:layout_width="match_parent"
            android:text="@string/home_tabhost_theme" />
    </LinearLayout>
    <View style="@style/menuline" />
</LinearLayout>
