<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" android:background="@color/day_colorPrimary">
    <EditText
        android:id="@+id/pass_popview_type" android:hint="@string/name" style="@style/netinfowindow_edittext"/>
    <EditText
        android:id="@+id/pass_popview_name" android:hint="@string/account" style="@style/netinfowindow_edittext"/>
    <EditText
        android:id="@+id/pass_popview_pass" android:hint="@string/password" style="@style/netinfowindow_edittext"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"  android:orientation="horizontal">
        <Button
            android:id="@+id/pass_popview_submit"
            android:text="@string/sure"
            style="@style/netinfowindow_button"/>
        <Button
            android:id="@+id/pass_popview_cancel"
            android:text="@string/cancel"
            style="@style/netinfowindow_button"/>
    </LinearLayout>
</LinearLayout>